@@ -7,3 +7,5 @@ Authors of QARecord:
   Guido Scholz <guido.scholz at bayernline.de>
   David Henningsson <qarecord at epost.diwic.se>
 
+Nadir logo is based on
+  http://es.wikipedia.org/wiki/Archivo:Emisferi_celesti.svg
